tests/golden/error/private_ctor_expr/main.tg
// AC2: Private constructor usage from another module produces E0016.
// PrivToken is private, so its constructors are private too.

mod helper;

fn main() -> Nat {
    let x = helper::Secret;
    0
}
